# embedded-robotics-library

./: .gitignore  .gitmodules  .markdownlint.yaml  .markdownlint.yml  .markdownlintignore  Cargo.toml  EXAMPLES_CATALOG.md  GETTING_STARTED.md  README.md  README_UPDATE.md  SESSION_SUMMARY.md  THIRD_PARTY_NOTICES.md  populate-library.sh  repo-structure.txt
.github/workflows/: ci.yml
common/: ALGORITHMS.md
common/protocols/: README.md  telemetry_v1.json
dependencies/cargo-templates/: esp32-project-template.toml  esp32-robotics-nostd.toml  esp32-robotics-std.toml  esp32p4-robotics.toml  raspberry-pi-robotics.toml
dependencies/crate-configs/: rust-toolchain.toml
docs/templates/: EXAMPLE_CONTRACT_TEMPLATE.md
drivers/bme280/: Cargo.toml
drivers/bme280/src/: lib.rs
esp32/communication/mqtt-telemetry-sender/: Cargo.toml  README.md
esp32/communication/mqtt-telemetry-sender/src/: main.rs
esp32/communication/wifi/udp-telemetry-sender/: Cargo.toml  README.md
esp32/communication/wifi/udp-telemetry-sender/src/: main.rs
esp32/examples/snake-complete/: SOURCE.md  main.rs
esp32/examples/snake-game/: SOURCE.md
esp32/examples/std-demo/: SOURCE.md
esp32/examples/wifi-tank/: SOURCE.md  main.rs  motors.rs
esp32/p4-specific/: README.md
esp32/sensors/examples/: README.md  mpu6050-basic.rs  vl53l0x-distance.rs
esp32/sensors/imu/: README.md
esp32/sensors/temperature-logger/: SOURCE.md
esp32/utilities/i2c-scanner/: Cargo.toml  README.md
esp32/utilities/i2c-scanner/src/: main.rs
farm-equipment/isobus/cpp/: README.md
j1939-automotive/c/: Main.c  README.md
j1939-automotive/cpp/: README.md
j1939-automotive/python/: README.md
j1939-automotive/python/j1939/: diagnostic_messages.py
jetson-orin/examples/gpio-blink/: Cargo.toml  README.md
jetson-orin/examples/gpio-blink/src/: main.rs
jetson-orin/examples/pwm-servo/: Cargo.toml  README.md
jetson-orin/examples/pwm-servo/src/: main.rs
jetson-orin/examples/rtsp-camera-streamer/: Cargo.toml  README.md  SOURCE.md
jetson-orin/examples/rtsp-camera-streamer/src/: main.rs
jetson-ros2/can-bus/ros2_socketcan/.github/workflows/: build_test.yml
jetson-ros2/can-bus/ros2_socketcan/ros2_socketcan/include/ros2_socketcan/: socket_can_sender.hpp  socket_can_sender_node.hpp
jetson-ros2/can-bus/ros2_socketcan/ros2_socketcan/launch/: socket_can_bridge.launch.xml  socket_can_sender.launch.py
jetson-ros2/can-bus/ros2_socketcan/ros2_socketcan/src/: socket_can_sender.cpp  socket_can_sender_node.cpp
jetson-ros2/multi-node/: README.md
obd2-diagnostics/cpp/: README.md
obd2-diagnostics/python/: README.md
obd2-diagnostics/rust/: README.md
raspberry-pi/gpio/rppal-examples/: SOURCE.md
raspberry-pi/gpio/servo-controller/: Cargo.toml  README.md  SOURCE.md
raspberry-pi/gpio/servo-controller/src/: main.rs
raspberry-pi/pico-2w/examples/led-blink/: Cargo.toml  README.md
raspberry-pi/pico-2w/examples/led-blink/src/: main.rs
raspberry-pi/protocols/canbus/: README.md  async_std_bridge.rs  async_std_print_frames.rs  async_std_send.rs  blocking.rs  echo.rs  echo_fd.rs  enumerate.rs  fd_send.rs  nonblocking.rs  playlog.rs  smol_bridge.rs  smol_print_frames.rs  smol_send.rs  tokio_average.rs  tokio_bridge.rs  tokio_print_frames.rs  tokio_send.rs
raspberry-pi/protocols/ethercat/: README.md  akd.rs.disabled  c5-e.rs.disabled  dc-lan9252-groups.rs  dc.rs  discover.rs  dump-eeprom.rs  ec400.rs.disabled  ek1100.rs  io-uring.rs  multiple-groups.rs  performance.rs  release.rs  sdo-info.rs  smol-io-uring.rs  windows.rs  xdp.rs
raspberry-pi/protocols/modbus/: README.md  rtu-client-sync.rs  rtu-client.rs  rtu-over-tcp-server.rs  rtu-server-address.rs  rtu-server.rs  tcp-client-custom-fn.rs  tcp-client-sync.rs  tcp-client.rs  tcp-server.rs  tls-client.rs  tls-server.rs
raspberry-pi/ros2-integration/: Cargo.toml  SETUP.md
raspberry-pi/ros2-integration/examples/: ros2_imu_publisher.rs  ros2_motor_controller.rs
raspberry-pi/sensors/bmp280-i2c/: Cargo.toml  README.md
raspberry-pi/sensors/bmp280-i2c/src/: main.rs
raspberry-pi/utilities/udp-telemetry-receiver/: Cargo.toml  README.md
raspberry-pi/utilities/udp-telemetry-receiver/src/: main.rs
robotic-arms/: README.md
robotic-arms/openrr/.github/.cspell/: project-dictionary.txt
robotic-arms/openrr/.github/workflows/: ci.yml
robotic-arms/openrr/sigma-compile-test/: Cargo.toml
robotic-arms/openrr/sigma-compile-test/src/: main.rs
robotic-arms/rs-opw-kinematics/sigma-compile-test/: Cargo.toml
robotic-arms/rs-opw-kinematics/sigma-compile-test/src/: main.rs
servo-control/yaskawa-ethercat/: main_igh_ethercat.c
servo-control/yaskawa-ethercat/c/: README.md  main_yas.c  main_yas_dc.c
