[package]
name = "jetson-pwm-servo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "PWM servo control example for Jetson Orin using Linux sysfs PWM"

[features]
default = []
sigma-rack = ["dep:reqwest", "dep:rumqttc", "dep:serde", "dep:serde_json"]

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rumqttc = { version = "0.24", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
