[package]
name = "udp-telemetry-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.17", features = ["esp32s3"] }
esp-backtrace = { version = "0.11", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.9", features = ["esp32s3"] }
esp-alloc = "0.3"
esp-wifi = { version = "0.5", features = ["esp32s3", "wifi"] }

embedded-hal = "1.0"
embedded-io = "0.6"
smoltcp = { version = "0.11", default-features = false, features = ["socket-udp"] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
heapless = "0.8"

[profile.release]
opt-level = "z"
lto = true
