[package]
name = "udp-telemetry-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.17", features = ["esp32s3"] }
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler"] }
esp-println = { version = "0.16.1", features = ["esp32s3"] }
esp-alloc = "0.3"
esp-wifi = { version = "0.5", features = ["esp32s3", "wifi"] }
#esp-sync = "0.1.1"   # if no higher published, but see below
embedded-hal = "1.0"
embedded-io = "0.6"
smoltcp = { version = "0.11", default-features = false, features = ["socket-udp"] }
xtensa-lx = "0.13.0"  
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
heapless = "0.8"
esp-sync = { git = "https://github.com/esp-rs/esp-hal", branch = "main", package = "esp-sync" }
[profile.release]
opt-level = "z"
lto = true
