[package]
name = "pico2w-led-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
rp2040-hal = { version = "0.9", features = ["rp2040-e5"] }
panic-halt = "0.2"

# For Pico 2W WiFi chip LED control
cyw43 = "0.1"
cyw43-pio = "0.1"
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = "0.3"
embassy-rp = { version = "0.1", features = ["time-driver"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
